// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manual Case Defendant Component should render the component for SJP case and legal entity defendant 1`] = `
<manual-case-defendant-test
  handleFormSubmit={[Function Function]}
  manualCaseDefendants={[Function Array]}
  manualCaseDetail={[Function Object]}
  manualCaseType={[Function String]}
  prosecutors={[Function Array]}
>
  <manual-case-defendant>
    <h1
      class="govuk-heading-xl"
      pdk-typography="heading-xlarge"
    >
      MANUAL_CASE_DEFENDANT.PAGE_TITLE
    </h1>
    <h2
      class="govuk-heading-m"
      pdk-typography="heading-medium"
    >
      MANUAL_CASE_DEFENDANT.DEFENDANT_NO 1
    </h2>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-two-thirds"
        two-thirds=""
      >
        <fieldset
          class="govuk-!-margin-top-3 govuk-fieldset"
          pdk-fieldset=""
          pdk-margin-top="3"
        >
          <legend
            class="govuk-!-margin-bottom-3"
            pdk-margin-bottom="3"
          >
             MANUAL_CASE_DEFENDANT.DEFENDANT_TYPE 
          </legend>
          <pdk-radio-group
            class="govuk-!-margin-bottom-3 ng-untouched ng-pristine ng-valid"
            data-role="other-type-input"
            name="type"
            pdk-margin-bottom="3"
          >
            <div
              class="govuk-radios govuk-radios--inline"
            >
              <pdk-radio-button
                value="INDIVIDUAL"
              >
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="INDIVIDUAL"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     APPLICANT_DETAILS.INDIVIDUAL 
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button
                value="ORGANISATION"
              >
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="ORGANISATION"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     APPLICANT_DETAILS.ORGANISATION 
                  </label>
                </div>
              </pdk-radio-button>
            </div>
          </pdk-radio-group>
        </fieldset>
        <organisation-defendant-form>
          <form
            class="ng-untouched ng-pristine ng-valid"
            novalidate=""
            pdk-form=""
          >
            <pdk-form-field
              class="govuk-!-margin-top-4"
              labeltype="small"
              pdk-margin-top="4"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="pdk-form-control-undefined-GENERATED_ID"
                >
                   MANUAL_CASE_DEFENDANT.ORGANISATION_NAME 
                </label>
                <textarea
                  class="ng-untouched ng-pristine ng-valid govuk-input"
                  data-role="organisationName-input"
                  id="pdk-form-control-undefined-GENERATED_ID"
                  maxlength="255"
                  name="organisationName"
                  pdk-input=""
                  pdk-resize=""
                  pdk-text-input=""
                  required=""
                  style="resize: none; height: -146px; min-height: -26px; max-height: -146px;"
                >
                </textarea>
              </pdk-form-group>
            </pdk-form-field>
            <pdk-form-field
              labeltype="small"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="pdk-form-control-undefined-GENERATED_ID"
                >
                   MANUAL_CASE_DEFENDANT.NUMBER_OF_CONVICTIONS 
                </label>
                <input
                  class="ng-untouched ng-pristine ng-valid govuk-input"
                  id="pdk-form-control-undefined-GENERATED_ID"
                  name="numPreviousConvictions"
                  pdk-input=""
                  pdk-text-input="number"
                  type="number"
                />
              </pdk-form-group>
            </pdk-form-field>
            <pdk-form-field
              labeltype="small"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="pdk-form-control-undefined-GENERATED_ID"
                >
                   MANUAL_CASE_DEFENDANT.ARREST_SUMMONS_NUMBER 
                </label>
                <input
                  class="ng-untouched ng-pristine ng-valid govuk-input"
                  id="pdk-form-control-undefined-GENERATED_ID"
                  maxlength="20"
                  name="asn"
                  pdk-input=""
                  pdk-text-input=""
                  required=""
                  type="text"
                />
              </pdk-form-group>
            </pdk-form-field>
            <h2
              class="bold govuk-!-margin-bottom-3 govuk-body-m"
              pdk-margin-bottom="3"
              pdk-typography="body-medium"
            >
               MANUAL_CASE_DEFENDANT.DEFENDANT_ADDRESS 
            </h2>
            <pdk-form-field
              class="govuk-!-margin-bottom-3"
              labeltype="small"
              pdk-margin-bottom="3"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend govuk-fieldset__legend--s"
                  >
                     MANUAL_CASE_DEFENDANT.ADDRESS 
                  </legend>
                  <input-address
                    class="ng-untouched ng-pristine ng-valid"
                    data-role="address-input"
                    name="address"
                  >
                    <div
                      class="govuk-!-margin-bottom-6 ng-untouched ng-pristine ng-invalid"
                      pdk-margin-bottom="6"
                    >
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-address1"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Address line 1 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-address1"
                          maxlength="35"
                          name="address1"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-address2"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Address line 2 (optional) 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-address2"
                          maxlength="35"
                          name="address2"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-address3"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Address line 3 (optional) 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-address3"
                          maxlength="35"
                          name="address3"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-address4"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Address line 4 (optional) 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-address4"
                          maxlength="35"
                          name="address4"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-address5"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Address line 5 (optional) 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-address5"
                          maxlength="35"
                          name="address5"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-postcode"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Postcode 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-postcode"
                          maxlength="8"
                          name="postcode"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                    </div>
                  </input-address>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
            <h2
              class="bold govuk-!-margin-bottom-3 govuk-body-m"
              pdk-margin-bottom="3"
              pdk-typography="body-medium"
            >
               MANUAL_CASE_DEFENDANT.DEFENDANT_CONTACT_DETAILS 
            </h2>
            <pdk-form-field>
              <pdk-form-group
                class="pdk-form-group"
              >
                <label
                  class="govuk-label"
                  for="pdk-form-control-undefined-GENERATED_ID"
                >
                   MANUAL_CASE_DEFENDANT.EMAIL 
                </label>
                <input
                  class="ng-untouched ng-pristine ng-valid govuk-input"
                  id="pdk-form-control-undefined-GENERATED_ID"
                  maxlength="255"
                  name="emailAddress1"
                  pdk-input=""
                  pdk-text-input=""
                  type="email"
                  validateemail=""
                />
              </pdk-form-group>
            </pdk-form-field>
            <pdk-form-field>
              <pdk-form-group
                class="pdk-form-group"
              >
                <label
                  class="govuk-label"
                  for="pdk-form-control-undefined-GENERATED_ID"
                >
                   MANUAL_CASE_DEFENDANT.PHONE 
                </label>
                <input
                  class="ng-untouched ng-pristine ng-valid govuk-input"
                  id="pdk-form-control-undefined-GENERATED_ID"
                  maxlength="20"
                  name="telephoneNumberBusiness"
                  pdk-input=""
                  pdk-text-input=""
                  type="tel"
                  validatephone=""
                />
              </pdk-form-group>
            </pdk-form-field>
            <h2
              class="bold govuk-!-margin-bottom-3 govuk-body-m"
              pdk-margin-bottom="3"
              pdk-typography="body-medium"
            >
               MANUAL_CASE_DEFENDANT.DEFENDANT_NEEDS 
            </h2>
            <pdk-form-field>
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend"
                  >
                     MANUAL_CASE_DEFENDANT.WRITTEN_LANGUAGE_NEEDS 
                  </legend>
                  <pdk-radio-group
                    class="ng-untouched ng-pristine ng-valid"
                    name="documentationLanguage"
                    required=""
                  >
                    <div
                      class="govuk-radios govuk-radios--inline"
                    >
                      <pdk-radio-button
                        value="ENGLISH"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="ENGLISH"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                            MANUAL_CASE_DEFENDANT.ENGLISH
                          </label>
                        </div>
                      </pdk-radio-button>
                      <pdk-radio-button
                        value="WELSH"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="WELSH"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                            MANUAL_CASE_DEFENDANT.WELSH
                          </label>
                        </div>
                      </pdk-radio-button>
                    </div>
                  </pdk-radio-group>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
            <pdk-form-field>
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend"
                  >
                     MANUAL_CASE_DEFENDANT.HEARING_LANGUAGE_NEEDS 
                  </legend>
                  <pdk-radio-group
                    class="ng-untouched ng-pristine ng-valid"
                    name="hearingLanguage"
                    required=""
                  >
                    <div
                      class="govuk-radios govuk-radios--inline"
                    >
                      <pdk-radio-button
                        value="ENGLISH"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="ENGLISH"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                            MANUAL_CASE_DEFENDANT.ENGLISH
                          </label>
                        </div>
                      </pdk-radio-button>
                      <pdk-radio-button
                        value="WELSH"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="WELSH"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                            MANUAL_CASE_DEFENDANT.WELSH
                          </label>
                        </div>
                      </pdk-radio-button>
                    </div>
                  </pdk-radio-group>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
            <pdk-form-group
              class="pdk-form-group"
            >
              <button
                class="govuk-button"
                data-role="continue"
                pdk-button=""
                type="submit"
              >
                 MANUAL_CASE_DEFENDANT.CONTINUE 
              </button>
            </pdk-form-group>
            <p
              class="govuk-!-margin-top-3"
              pdk-margin-top="3"
            >
              <a
                class="govuk-link govuk-link--no-visited-state"
                href="javascript:void(0)"
                pdk-link=""
                unvisited=""
              >
                 MANUAL_CASE_DEFENDANT.BACK 
              </a>
            </p>
          </form>
        </organisation-defendant-form>
      </pdk-grid>
    </pdk-grid>
  </manual-case-defendant>
</manual-case-defendant-test>
`;

exports[`Manual Case Defendant Component should render the component for the Ist defendant from the list 1`] = `
<manual-case-defendant-test
  handleFormSubmit={[Function Function]}
  manualCaseDefendants={[Function Array]}
  manualCaseDetail={[Function Object]}
  manualCaseType={[Function String]}
  prosecutors={[Function Array]}
>
  <manual-case-defendant>
    <h1
      class="govuk-heading-xl"
      pdk-typography="heading-xlarge"
    >
      MANUAL_CASE_DEFENDANT.PAGE_TITLE
    </h1>
    <h2
      class="govuk-heading-m"
      pdk-typography="heading-medium"
    >
      MANUAL_CASE_DEFENDANT.DEFENDANT_NO 1
    </h2>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-two-thirds"
        two-thirds=""
      >
        <fieldset
          class="govuk-!-margin-top-3 govuk-fieldset"
          pdk-fieldset=""
          pdk-margin-top="3"
        >
          <legend
            class="govuk-!-margin-bottom-3"
            pdk-margin-bottom="3"
          >
             MANUAL_CASE_DEFENDANT.DEFENDANT_TYPE 
          </legend>
          <pdk-radio-group
            class="govuk-!-margin-bottom-3 ng-untouched ng-pristine ng-valid"
            data-role="other-type-input"
            name="type"
            pdk-margin-bottom="3"
          >
            <div
              class="govuk-radios govuk-radios--inline"
            >
              <pdk-radio-button
                value="INDIVIDUAL"
              >
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="INDIVIDUAL"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     APPLICANT_DETAILS.INDIVIDUAL 
                  </label>
                </div>
              </pdk-radio-button>
              <pdk-radio-button
                value="ORGANISATION"
              >
                <div
                  class="govuk-radios__item"
                >
                  <input
                    class="govuk-radios__input"
                    id="pdk-radio-GENERATED_ID"
                    name="pdk-radio-group-GENERATED_ID"
                    type="radio"
                    value="ORGANISATION"
                  />
                  <label
                    class="govuk-radios__label govuk-label"
                    for="pdk-radio-GENERATED_ID"
                    pdk-label=""
                  >
                     APPLICANT_DETAILS.ORGANISATION 
                  </label>
                </div>
              </pdk-radio-button>
            </div>
          </pdk-radio-group>
        </fieldset>
        <organisation-defendant-form>
          <form
            class="ng-untouched ng-pristine ng-valid"
            novalidate=""
            pdk-form=""
          >
            <pdk-form-field
              class="govuk-!-margin-top-4"
              labeltype="small"
              pdk-margin-top="4"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="pdk-form-control-undefined-GENERATED_ID"
                >
                   MANUAL_CASE_DEFENDANT.ORGANISATION_NAME 
                </label>
                <textarea
                  class="ng-untouched ng-pristine ng-valid govuk-input"
                  data-role="organisationName-input"
                  id="pdk-form-control-undefined-GENERATED_ID"
                  maxlength="255"
                  name="organisationName"
                  pdk-input=""
                  pdk-resize=""
                  pdk-text-input=""
                  required=""
                  style="resize: none; height: -146px; min-height: -26px; max-height: -146px;"
                >
                </textarea>
              </pdk-form-group>
            </pdk-form-field>
            <h2
              class="bold govuk-!-margin-bottom-3 govuk-body-m"
              pdk-margin-bottom="3"
              pdk-typography="body-medium"
            >
               MANUAL_CASE_DEFENDANT.DEFENDANT_ADDRESS 
            </h2>
            <pdk-form-field
              class="govuk-!-margin-bottom-3"
              labeltype="small"
              pdk-margin-bottom="3"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend govuk-fieldset__legend--s"
                  >
                     MANUAL_CASE_DEFENDANT.ADDRESS 
                  </legend>
                  <input-address
                    class="ng-untouched ng-pristine ng-valid"
                    data-role="address-input"
                    name="address"
                  >
                    <div
                      class="govuk-!-margin-bottom-6 ng-untouched ng-pristine ng-invalid"
                      pdk-margin-bottom="6"
                    >
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-address1"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Address line 1 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-address1"
                          maxlength="35"
                          name="address1"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-address2"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Address line 2 (optional) 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-address2"
                          maxlength="35"
                          name="address2"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-address3"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Address line 3 (optional) 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-address3"
                          maxlength="35"
                          name="address3"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-address4"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Address line 4 (optional) 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-address4"
                          maxlength="35"
                          name="address4"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-address5"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Address line 5 (optional) 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-address5"
                          maxlength="35"
                          name="address5"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                          for="address-control-undefined-GENERATED_ID-postcode"
                          pdk-label="small"
                          pdk-margin-top="6"
                        >
                           Postcode 
                        </label>
                        <input
                          class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                          id="address-control-undefined-GENERATED_ID-postcode"
                          maxlength="8"
                          name="postcode"
                          pdk-input=""
                          pdk-text-input=""
                          required=""
                          type="text"
                        />
                      </pdk-form-group>
                    </div>
                  </input-address>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
            <h2
              class="bold govuk-!-margin-bottom-3 govuk-body-m"
              pdk-margin-bottom="3"
              pdk-typography="body-medium"
            >
               MANUAL_CASE_DEFENDANT.DEFENDANT_CONTACT_DETAILS 
            </h2>
            <pdk-form-field>
              <pdk-form-group
                class="pdk-form-group"
              >
                <label
                  class="govuk-label"
                  for="pdk-form-control-undefined-GENERATED_ID"
                >
                   MANUAL_CASE_DEFENDANT.EMAIL 
                </label>
                <input
                  class="ng-untouched ng-pristine ng-valid govuk-input"
                  id="pdk-form-control-undefined-GENERATED_ID"
                  maxlength="255"
                  name="emailAddress1"
                  pdk-input=""
                  pdk-text-input=""
                  type="email"
                  validateemail=""
                />
              </pdk-form-group>
            </pdk-form-field>
            <pdk-form-field>
              <pdk-form-group
                class="pdk-form-group"
              >
                <label
                  class="govuk-label"
                  for="pdk-form-control-undefined-GENERATED_ID"
                >
                   MANUAL_CASE_DEFENDANT.PHONE 
                </label>
                <input
                  class="ng-untouched ng-pristine ng-valid govuk-input"
                  id="pdk-form-control-undefined-GENERATED_ID"
                  maxlength="20"
                  name="telephoneNumberBusiness"
                  pdk-input=""
                  pdk-text-input=""
                  type="tel"
                  validatephone=""
                />
              </pdk-form-group>
            </pdk-form-field>
            <h2
              class="bold govuk-!-margin-bottom-3 govuk-body-m"
              pdk-margin-bottom="3"
              pdk-typography="body-medium"
            >
               MANUAL_CASE_DEFENDANT.DEFENDANT_NEEDS 
            </h2>
            <pdk-form-field>
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend"
                  >
                     MANUAL_CASE_DEFENDANT.WRITTEN_LANGUAGE_NEEDS 
                  </legend>
                  <pdk-radio-group
                    class="ng-untouched ng-pristine ng-valid"
                    name="documentationLanguage"
                    required=""
                  >
                    <div
                      class="govuk-radios govuk-radios--inline"
                    >
                      <pdk-radio-button
                        value="ENGLISH"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="ENGLISH"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                            MANUAL_CASE_DEFENDANT.ENGLISH
                          </label>
                        </div>
                      </pdk-radio-button>
                      <pdk-radio-button
                        value="WELSH"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="WELSH"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                            MANUAL_CASE_DEFENDANT.WELSH
                          </label>
                        </div>
                      </pdk-radio-button>
                    </div>
                  </pdk-radio-group>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
            <pdk-form-field>
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend"
                  >
                     MANUAL_CASE_DEFENDANT.HEARING_LANGUAGE_NEEDS 
                  </legend>
                  <pdk-radio-group
                    class="ng-untouched ng-pristine ng-valid"
                    name="hearingLanguage"
                    required=""
                  >
                    <div
                      class="govuk-radios govuk-radios--inline"
                    >
                      <pdk-radio-button
                        value="ENGLISH"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="ENGLISH"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                            MANUAL_CASE_DEFENDANT.ENGLISH
                          </label>
                        </div>
                      </pdk-radio-button>
                      <pdk-radio-button
                        value="WELSH"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="WELSH"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                            MANUAL_CASE_DEFENDANT.WELSH
                          </label>
                        </div>
                      </pdk-radio-button>
                    </div>
                  </pdk-radio-group>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
            <pdk-form-group
              class="pdk-form-group"
            >
              <button
                class="govuk-button"
                data-role="continue"
                pdk-button=""
                type="submit"
              >
                 MANUAL_CASE_DEFENDANT.CONTINUE 
              </button>
            </pdk-form-group>
            <p
              class="govuk-!-margin-top-3"
              pdk-margin-top="3"
            >
              <a
                class="govuk-link govuk-link--no-visited-state"
                href="javascript:void(0)"
                pdk-link=""
                unvisited=""
              >
                 MANUAL_CASE_DEFENDANT.BACK 
              </a>
            </p>
          </form>
        </organisation-defendant-form>
      </pdk-grid>
    </pdk-grid>
  </manual-case-defendant>
</manual-case-defendant-test>
`;
